bison.output
Grammar

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR BPUNTO_Y_COMA cabecera_alg bloque_alg BFALGORITMO BPUNTO

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal BCOMENTARIO

    3 bloque_alg: bloque BCOMENTARIO

    4 decl_globales: declaracion_tipo decl_globales
    5              | declaracion_const decl_globales
    6              | %empty

    7 decl_a_f: accion_d decl_a_f
    8         | funcion_d decl_a_f
    9         | %empty

   10 bloque: declaraciones instrucciones

   11 declaraciones: declaracion_tipo declaraciones
   12              | declaracion_const declaraciones
   13              | declaracion_var declaraciones
   14              | %empty

   15 declaracion_tipo: BTIPO lista_d_tipo BFTIPO BPUNTO_Y_COMA

   16 declaracion_const: BCONST lista_d_cte BFCONST BPUNTO_Y_COMA

   17 declaracion_var: BVAR lista_d_var BFVAR BPUNTO_Y_COMA

   18 lista_d_tipo: BIDENTIFICADOR BIGUAL d_tipo BPUNTO_Y_COMA lista_d_tipo
   19             | %empty

   20 d_tipo: BTUPLA lista_campos BFTUPLA
   21       | BTABLA BCORCHETE_APERTURA expresion_t BPUNTOSS expresion_t BCORCHETE_CIERRE BDE d_tipo
   22       | BIDENTIFICADOR
   23       | expresion_t BPUNTOSS expresion_t
   24       | BREF d_tipo
   25       | BTIPO_BASE

   26 expresion_t: expresion
   27            | BLITERAL_CARACTER

   28 lista_campos: BIDENTIFICADOR BDOS_PUNTOS d_tipo BPUNTO_Y_COMA lista_campos
   29             | %empty

   30 lista_d_cte: BIDENTIFICADOR BIGUAL BLITERAL BPUNTO_Y_COMA lista_d_cte
   31            | %empty

   32 lista_d_var: lista_id BDOS_PUNTOS BIDENTIFICADOR BPUNTO_Y_COMA lista_d_var
   33            | %empty

   34 lista_id: BIDENTIFICADOR BCOMA lista_id
   35         | BIDENTIFICADOR

   36 decl_ent_sal: decl_ent
   37             | decl_ent decl_sal
   38             | decl_sal

   39 decl_ent: BENT lista_d_var

   40 decl_sal: BSAL lista_d_var

   41 expresion: exp_a
   42          | exp_b
   43          | funcion_ll

   44 exp_a: exp_a BSUMA exp_a
   45      | exp_a BMENOS exp_a
   46      | exp_a BPOR exp_a
   47      | exp_a BENTRE exp_a
   48      | exp_a BMOD exp_a
   49      | exp_a BDIV exp_a
   50      | BPARENTESIS_APERTURA exp_a BPARENTESIS_CIERRE
   51      | operando
   52      | BLITERAL_NUMERICO
   53      | BMENOS exp_a

   54 exp_b: exp_b BY exp_b
   55      | exp_b BO exp_b
   56      | BNO exp_b
   57      | operando_booleano
   58      | BVERDADERO
   59      | BFALSO
   60      | BPARENTESIS_APERTURA exp_b BPARENTESIS_CIERRE
   61      | exp_a BOPREL exp_a

   62 operando: BIDENTIFICADOR
   63         | operando BPUNTO operando
   64         | operando BCORCHETE_APERTURA expresion BCORCHETE_CIERRE
   65         | operando BREF

   66 operando_booleano: BIDENTIFICADORB

   67 instrucciones: instruccion BPUNTO_Y_COMA instrucciones
   68              | instruccion

   69 instruccion: BCONTINUAR
   70            | asignacion
   71            | alternativa
   72            | iteracion

   73 asignacion: operando BDOS_PUNTOS_IGUAL
   74           | expresion

   75 alternativa: BSI expresion BENTONCES instrucciones lista_opciones BFSI

   76 lista_opciones: BSINO expresion BENTONCES instrucciones lista_opciones
   77               | %empty

   78 iteracion: it_cota_fija
   79          | it_cota_exp

   80 it_cota_exp: BMIENTRAS expresion BHACER instrucciones BFMIENTRAS

   81 it_cota_fija: BPARA BIDENTIFICADOR BDOS_PUNTOS_IGUAL expresion BHASTA expresion BHACER instrucciones BFPARA

   82 accion_d: BACCION a_cabecera bloque BFACCION

   83 funcion_d: BFUNCION f_cabecera bloque BDEV expresion BFFUNCION

   84 a_cabecera: BIDENTIFICADOR BPARENTESIS_APERTURA d_par_form BPARENTESIS_CIERRE BPUNTO_Y_COMA

   85 f_cabecera: BIDENTIFICADOR BPARENTESIS_APERTURA lista_d_var BPARENTESIS_CIERRE BDEF d_tipo BPUNTO_Y_COMA

   86 d_par_form: d_p_form BPUNTO_Y_COMA d_par_form
   87           | %empty

   88 d_p_form: BEND lista_id BDOS_PUNTOS d_tipo
   89         | BSAL lista_id BDOS_PUNTOS d_tipo
   90         | BES lista_id BDOS_PUNTOS d_tipo

   91 funcion_ll: BIDENTIFICADOR BPARENTESIS_APERTURA l_ll BPARENTESIS_CIERRE

   92 l_ll: expresion BCOMA l_ll
   93     | expresion


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BALGORITMO <valor_texto> (258) 1
    BIDENTIFICADOR <valor_texto> (259) 1 18 22 28 30 32 34 35 62 81 84 85 91
    BPUNTO_Y_COMA <valor_texto> (260) 1 15 16 17 18 28 30 32 67 84 85 86
    BFALGORITMO <valor_texto> (261) 1
    BPUNTO <valor_texto> (262) 1 63
    BCOMENTARIO <valor_texto> (263) 2 3
    BTIPO <valor_texto> (264) 15
    BFTIPO <valor_texto> (265) 15
    BCONST <valor_texto> (266) 16
    BFCONST <valor_texto> (267) 16
    BVAR <valor_texto> (268) 17
    BFVAR <valor_texto> (269) 17
    BIGUAL <valor_texto> (270) 18 30
    BTUPLA <valor_texto> (271) 20
    BFTUPLA <valor_texto> (272) 20
    BTABLA <valor_texto> (273) 21
    BCORCHETE_APERTURA <valor_texto> (274) 21 64
    BDE <valor_texto> (275) 21
    BEND <valor_texto> (276) 88
    BLITERAL <valor_texto> (277) 30
    BDEF <valor_texto> (278) 85
    BREF <valor_texto> (279) 24 65
    BTIPO_BASE <valor_texto> (280) 25
    BPUNTOSS <valor_texto> (281) 21 23
    BLITERAL_CARACTER <valor_texto> (282) 27
    BCORCHETE_CIERRE <valor_texto> (283) 21 64
    BDOS_PUNTOS <valor_texto> (284) 28 32 88 89 90
    BCOMA <valor_texto> (285) 34 92
    BENT <valor_texto> (286) 39
    BSAL <valor_texto> (287) 40 89
    BSUMA <valor_texto> (288) 44
    BMENOS <valor_texto> (289) 45 53
    BPOR <valor_texto> (290) 46
    BENTRE <valor_texto> (291) 47
    BMOD <valor_texto> (292) 48
    BDIV <valor_texto> (293) 49
    BPARENTESIS_APERTURA <valor_texto> (294) 50 60 84 85 91
    BPARENTESIS_CIERRE <valor_texto> (295) 50 60 84 85 91
    BLITERAL_NUMERICO <valor_texto> (296) 52
    BY <valor_texto> (297) 54
    BO <valor_texto> (298) 55
    BNO <valor_texto> (299) 56
    BVERDADERO <valor_texto> (300) 58
    BFALSO <valor_texto> (301) 59
    BOPREL <valor_texto> (302) 61
    BCONTINUAR <valor_texto> (303) 69
    BDOS_PUNTOS_IGUAL <valor_texto> (304) 73 81
    BSI <valor_texto> (305) 75
    BENTONCES <valor_texto> (306) 75 76
    BMIENTRAS <valor_texto> (307) 80
    BFSI <valor_texto> (308) 75
    BSINO <valor_texto> (309) 76
    BHACER <valor_texto> (310) 80 81
    BFMIENTRAS <valor_texto> (311) 80
    BPARA <valor_texto> (312) 81
    BHASTA <valor_texto> (313) 81
    BFPARA <valor_texto> (314) 81
    BACCION <valor_texto> (315) 82
    BFUNCION <valor_texto> (316) 83
    BDEV <valor_texto> (317) 83
    BFFUNCION <valor_texto> (318) 83
    BFACCION <valor_texto> (319) 82
    BES <valor_texto> (320) 90
    BIDENTIFICADORB <valor_texto> (321) 66
    UMINUS (322)
    UBNO (323)


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    desc_algoritmo (70)
        on left: 1
        on right: 0
    cabecera_alg <valor_texto> (71)
        on left: 2
        on right: 1
    bloque_alg <valor_texto> (72)
        on left: 3
        on right: 1
    decl_globales <valor_texto> (73)
        on left: 4 5 6
        on right: 2 4 5
    decl_a_f <valor_texto> (74)
        on left: 7 8 9
        on right: 2 7 8
    bloque <valor_texto> (75)
        on left: 10
        on right: 3 82 83
    declaraciones <valor_texto> (76)
        on left: 11 12 13 14
        on right: 10 11 12 13
    declaracion_tipo <valor_texto> (77)
        on left: 15
        on right: 4 11
    declaracion_const <valor_texto> (78)
        on left: 16
        on right: 5 12
    declaracion_var <valor_texto> (79)
        on left: 17
        on right: 13
    lista_d_tipo <valor_texto> (80)
        on left: 18 19
        on right: 15 18
    d_tipo <valor_texto> (81)
        on left: 20 21 22 23 24 25
        on right: 18 21 24 28 85 88 89 90
    expresion_t <valor_texto> (82)
        on left: 26 27
        on right: 21 23
    lista_campos <valor_texto> (83)
        on left: 28 29
        on right: 20 28
    lista_d_cte <valor_texto> (84)
        on left: 30 31
        on right: 16 30
    lista_d_var <valor_texto> (85)
        on left: 32 33
        on right: 17 32 39 40 85
    lista_id <valor_texto> (86)
        on left: 34 35
        on right: 32 34 88 89 90
    decl_ent_sal <valor_texto> (87)
        on left: 36 37 38
        on right: 2
    decl_ent <valor_texto> (88)
        on left: 39
        on right: 36 37
    decl_sal <valor_texto> (89)
        on left: 40
        on right: 37 38
    expresion <valor_texto> (90)
        on left: 41 42 43
        on right: 26 64 74 75 76 80 81 83 92 93
    exp_a <valor_texto> (91)
        on left: 44 45 46 47 48 49 50 51 52 53
        on right: 41 44 45 46 47 48 49 50 53 61
    exp_b <valor_texto> (92)
        on left: 54 55 56 57 58 59 60 61
        on right: 42 54 55 56 60
    operando <valor_texto> (93)
        on left: 62 63 64 65
        on right: 51 63 64 65 73
    operando_booleano <valor_texto> (94)
        on left: 66
        on right: 57
    instrucciones <valor_texto> (95)
        on left: 67 68
        on right: 10 67 75 76 80 81
    instruccion <valor_texto> (96)
        on left: 69 70 71 72
        on right: 67 68
    asignacion <valor_texto> (97)
        on left: 73 74
        on right: 70
    alternativa <valor_texto> (98)
        on left: 75
        on right: 71
    lista_opciones <valor_texto> (99)
        on left: 76 77
        on right: 75 76
    iteracion <valor_texto> (100)
        on left: 78 79
        on right: 72
    it_cota_exp <valor_texto> (101)
        on left: 80
        on right: 79
    it_cota_fija <valor_texto> (102)
        on left: 81
        on right: 78
    accion_d <valor_texto> (103)
        on left: 82
        on right: 7
    funcion_d <valor_texto> (104)
        on left: 83
        on right: 8
    a_cabecera <valor_texto> (105)
        on left: 84
        on right: 82
    f_cabecera <valor_texto> (106)
        on left: 85
        on right: 83
    d_par_form <valor_texto> (107)
        on left: 86 87
        on right: 84 86
    d_p_form <valor_texto> (108)
        on left: 88 89 90
        on right: 86
    funcion_ll <valor_texto> (109)
        on left: 91
        on right: 43
    l_ll <valor_texto> (110)
        on left: 92 93
        on right: 91 92


State 0

    0 $accept: . desc_algoritmo $end

    BALGORITMO  shift, and go to state 1

    desc_algoritmo  go to state 2


State 1

    1 desc_algoritmo: BALGORITMO . BIDENTIFICADOR BPUNTO_Y_COMA cabecera_alg bloque_alg BFALGORITMO BPUNTO

    BIDENTIFICADOR  shift, and go to state 3


State 2

    0 $accept: desc_algoritmo . $end

    $end  shift, and go to state 4


State 3

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR . BPUNTO_Y_COMA cabecera_alg bloque_alg BFALGORITMO BPUNTO

    BPUNTO_Y_COMA  shift, and go to state 5


State 4

    0 $accept: desc_algoritmo $end .

    $default  accept


State 5

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR BPUNTO_Y_COMA . cabecera_alg bloque_alg BFALGORITMO BPUNTO

    BTIPO   shift, and go to state 6
    BCONST  shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    cabecera_alg       go to state 8
    decl_globales      go to state 9
    declaracion_tipo   go to state 10
    declaracion_const  go to state 11


State 6

   15 declaracion_tipo: BTIPO . lista_d_tipo BFTIPO BPUNTO_Y_COMA

    BIDENTIFICADOR  shift, and go to state 12

    $default  reduce using rule 19 (lista_d_tipo)

    lista_d_tipo  go to state 13


State 7

   16 declaracion_const: BCONST . lista_d_cte BFCONST BPUNTO_Y_COMA

    BIDENTIFICADOR  shift, and go to state 14

    $default  reduce using rule 31 (lista_d_cte)

    lista_d_cte  go to state 15


State 8

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR BPUNTO_Y_COMA cabecera_alg . bloque_alg BFALGORITMO BPUNTO

    BTIPO   shift, and go to state 6
    BCONST  shift, and go to state 7
    BVAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque_alg         go to state 17
    bloque             go to state 18
    declaraciones      go to state 19
    declaracion_tipo   go to state 20
    declaracion_const  go to state 21
    declaracion_var    go to state 22


State 9

    2 cabecera_alg: decl_globales . decl_a_f decl_ent_sal BCOMENTARIO

    BACCION   shift, and go to state 23
    BFUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 25
    accion_d   go to state 26
    funcion_d  go to state 27


State 10

    4 decl_globales: declaracion_tipo . decl_globales

    BTIPO   shift, and go to state 6
    BCONST  shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales      go to state 28
    declaracion_tipo   go to state 10
    declaracion_const  go to state 11


State 11

    5 decl_globales: declaracion_const . decl_globales

    BTIPO   shift, and go to state 6
    BCONST  shift, and go to state 7

    $default  reduce using rule 6 (decl_globales)

    decl_globales      go to state 29
    declaracion_tipo   go to state 10
    declaracion_const  go to state 11


State 12

   18 lista_d_tipo: BIDENTIFICADOR . BIGUAL d_tipo BPUNTO_Y_COMA lista_d_tipo

    BIGUAL  shift, and go to state 30


State 13

   15 declaracion_tipo: BTIPO lista_d_tipo . BFTIPO BPUNTO_Y_COMA

    BFTIPO  shift, and go to state 31


State 14

   30 lista_d_cte: BIDENTIFICADOR . BIGUAL BLITERAL BPUNTO_Y_COMA lista_d_cte

    BIGUAL  shift, and go to state 32


State 15

   16 declaracion_const: BCONST lista_d_cte . BFCONST BPUNTO_Y_COMA

    BFCONST  shift, and go to state 33


State 16

   17 declaracion_var: BVAR . lista_d_var BFVAR BPUNTO_Y_COMA

    BIDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 33 (lista_d_var)

    lista_d_var  go to state 35
    lista_id     go to state 36


State 17

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR BPUNTO_Y_COMA cabecera_alg bloque_alg . BFALGORITMO BPUNTO

    BFALGORITMO  shift, and go to state 37


State 18

    3 bloque_alg: bloque . BCOMENTARIO

    BCOMENTARIO  shift, and go to state 38


State 19

   10 bloque: declaraciones . instrucciones

    BIDENTIFICADOR        shift, and go to state 39
    BMENOS                shift, and go to state 40
    BPARENTESIS_APERTURA  shift, and go to state 41
    BLITERAL_NUMERICO     shift, and go to state 42
    BNO                   shift, and go to state 43
    BVERDADERO            shift, and go to state 44
    BFALSO                shift, and go to state 45
    BCONTINUAR            shift, and go to state 46
    BSI                   shift, and go to state 47
    BMIENTRAS             shift, and go to state 48
    BPARA                 shift, and go to state 49
    BIDENTIFICADORB       shift, and go to state 50

    expresion          go to state 51
    exp_a              go to state 52
    exp_b              go to state 53
    operando           go to state 54
    operando_booleano  go to state 55
    instrucciones      go to state 56
    instruccion        go to state 57
    asignacion         go to state 58
    alternativa        go to state 59
    iteracion          go to state 60
    it_cota_exp        go to state 61
    it_cota_fija       go to state 62
    funcion_ll         go to state 63


State 20

   11 declaraciones: declaracion_tipo . declaraciones

    BTIPO   shift, and go to state 6
    BCONST  shift, and go to state 7
    BVAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones      go to state 64
    declaracion_tipo   go to state 20
    declaracion_const  go to state 21
    declaracion_var    go to state 22


State 21

   12 declaraciones: declaracion_const . declaraciones

    BTIPO   shift, and go to state 6
    BCONST  shift, and go to state 7
    BVAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones      go to state 65
    declaracion_tipo   go to state 20
    declaracion_const  go to state 21
    declaracion_var    go to state 22


State 22

   13 declaraciones: declaracion_var . declaraciones

    BTIPO   shift, and go to state 6
    BCONST  shift, and go to state 7
    BVAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    declaraciones      go to state 66
    declaracion_tipo   go to state 20
    declaracion_const  go to state 21
    declaracion_var    go to state 22


State 23

   82 accion_d: BACCION . a_cabecera bloque BFACCION

    BIDENTIFICADOR  shift, and go to state 67

    a_cabecera  go to state 68


State 24

   83 funcion_d: BFUNCION . f_cabecera bloque BDEV expresion BFFUNCION

    BIDENTIFICADOR  shift, and go to state 69

    f_cabecera  go to state 70


State 25

    2 cabecera_alg: decl_globales decl_a_f . decl_ent_sal BCOMENTARIO

    BENT  shift, and go to state 71
    BSAL  shift, and go to state 72

    decl_ent_sal  go to state 73
    decl_ent      go to state 74
    decl_sal      go to state 75


State 26

    7 decl_a_f: accion_d . decl_a_f

    BACCION   shift, and go to state 23
    BFUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 76
    accion_d   go to state 26
    funcion_d  go to state 27


State 27

    8 decl_a_f: funcion_d . decl_a_f

    BACCION   shift, and go to state 23
    BFUNCION  shift, and go to state 24

    $default  reduce using rule 9 (decl_a_f)

    decl_a_f   go to state 77
    accion_d   go to state 26
    funcion_d  go to state 27


State 28

    4 decl_globales: declaracion_tipo decl_globales .

    $default  reduce using rule 4 (decl_globales)


State 29

    5 decl_globales: declaracion_const decl_globales .

    $default  reduce using rule 5 (decl_globales)


State 30

   18 lista_d_tipo: BIDENTIFICADOR BIGUAL . d_tipo BPUNTO_Y_COMA lista_d_tipo

    BIDENTIFICADOR        shift, and go to state 78
    BTUPLA                shift, and go to state 79
    BTABLA                shift, and go to state 80
    BREF                  shift, and go to state 81
    BTIPO_BASE            shift, and go to state 82
    BLITERAL_CARACTER     shift, and go to state 83
    BMENOS                shift, and go to state 40
    BPARENTESIS_APERTURA  shift, and go to state 41
    BLITERAL_NUMERICO     shift, and go to state 42
    BNO                   shift, and go to state 43
    BVERDADERO            shift, and go to state 44
    BFALSO                shift, and go to state 45
    BIDENTIFICADORB       shift, and go to state 50

    d_tipo             go to state 84
    expresion_t        go to state 85
    expresion          go to state 86
    exp_a              go to state 52
    exp_b              go to state 53
    operando           go to state 87
    operando_booleano  go to state 55
    funcion_ll         go to state 63


State 31

   15 declaracion_tipo: BTIPO lista_d_tipo BFTIPO . BPUNTO_Y_COMA

    BPUNTO_Y_COMA  shift, and go to state 88


State 32

   30 lista_d_cte: BIDENTIFICADOR BIGUAL . BLITERAL BPUNTO_Y_COMA lista_d_cte

    BLITERAL  shift, and go to state 89


State 33

   16 declaracion_const: BCONST lista_d_cte BFCONST . BPUNTO_Y_COMA

    BPUNTO_Y_COMA  shift, and go to state 90


State 34

   34 lista_id: BIDENTIFICADOR . BCOMA lista_id
   35         | BIDENTIFICADOR .

    BCOMA  shift, and go to state 91

    $default  reduce using rule 35 (lista_id)


State 35

   17 declaracion_var: BVAR lista_d_var . BFVAR BPUNTO_Y_COMA

    BFVAR  shift, and go to state 92


State 36

   32 lista_d_var: lista_id . BDOS_PUNTOS BIDENTIFICADOR BPUNTO_Y_COMA lista_d_var

    BDOS_PUNTOS  shift, and go to state 93


State 37

    1 desc_algoritmo: BALGORITMO BIDENTIFICADOR BPUNTO_Y_COMA cabecera_alg bloque_alg BFALGORITMO . BPUNTO

    BPUNTO  shift, and go to state 94


State 38

    3 bloque_alg: bloque BCOMENTARIO .

    $default  reduce using rule 3 (bloque_alg)


State 39

   62 operando: BIDENTIFICADOR .
   91 funcion_ll: BIDENTIFICADOR . BPARENTESIS_APERTURA l_ll BPARENTESIS_CIERRE

    BPARENTESIS_APERTURA  shift, and go to state 95

    $default  reduce using rule 62 (operando)


State 40

   53 exp_a: BMENOS . exp_a

    BIDENTIFICADOR        shift, and go to state 96
    BMENOS                shift, and go to state 40
    BPARENTESIS_APERTURA  shift, and go to state 97
    BLITERAL_NUMERICO     shift, and go to state 42

    exp_a     go to state 98
    operando  go to state 87


State 41

   50 exp_a: BPARENTESIS_APERTURA . exp_a BPARENTESIS_CIERRE
   60 exp_b: BPARENTESIS_APERTURA . exp_b BPARENTESIS_CIERRE

    BIDENTIFICADOR        shift, and go to state 96
    BMENOS                shift, and go to state 40
    BPARENTESIS_APERTURA  shift, and go to state 41
    BLITERAL_NUMERICO     shift, and go to state 42
    BNO                   shift, and go to state 43
    BVERDADERO            shift, and go to state 44
    BFALSO                shift, and go to state 45
    BIDENTIFICADORB       shift, and go to state 50

    exp_a              go to state 99
    exp_b              go to state 100
    operando           go to state 87
    operando_booleano  go to state 55


State 42

   52 exp_a: BLITERAL_NUMERICO .

    $default  reduce using rule 52 (exp_a)


State 43

   56 exp_b: BNO . exp_b

    BIDENTIFICADOR        shift, and go to state 96
    BMENOS                shift, and go to state 40
    BPARENTESIS_APERTURA  shift, and go to state 41
    BLITERAL_NUMERICO     shift, and go to state 42
    BNO                   shift, and go to state 43
    BVERDADERO            shift, and go to state 44
    BFALSO                shift, and go to state 45
    BIDENTIFICADORB       shift, and go to state 50

    exp_a              go to state 101
    exp_b              go to state 102
    operando           go to state 87
    operando_booleano  go to state 55


State 44

   58 exp_b: BVERDADERO .

    $default  reduce using rule 58 (exp_b)


State 45

   59 exp_b: BFALSO .

    $default  reduce using rule 59 (exp_b)


State 46

   69 instruccion: BCONTINUAR .

    $default  reduce using rule 69 (instruccion)


State 47

   75 alternativa: BSI . expresion BENTONCES instrucciones lista_opciones BFSI

    BIDENTIFICADOR        shift, and go to state 39
    BMENOS                shift, and go to state 40
    BPARENTESIS_APERTURA  shift, and go to state 41
    BLITERAL_NUMERICO     shift, and go to state 42
    BNO                   shift, and go to state 43
    BVERDADERO            shift, and go to state 44
    BFALSO                shift, and go to state 45
    BIDENTIFICADORB       shift, and go to state 50

    expresion          go to state 103
    exp_a              go to state 52
    exp_b              go to state 53
    operando           go to state 87
    operando_booleano  go to state 55
    funcion_ll         go to state 63


State 48

   80 it_cota_exp: BMIENTRAS . expresion BHACER instrucciones BFMIENTRAS

    BIDENTIFICADOR        shift, and go to state 39
    BMENOS                shift, and go to state 40
    BPARENTESIS_APERTURA  shift, and go to state 41
    BLITERAL_NUMERICO     shift, and go to state 42
    BNO                   shift, and go to state 43
    BVERDADERO            shift, and go to state 44
    BFALSO                shift, and go to state 45
    BIDENTIFICADORB       shift, and go to state 50

    expresion          go to state 104
    exp_a              go to state 52
    exp_b              go to state 53
    operando           go to state 87
    operando_booleano  go to state 55
    funcion_ll         go to state 63


State 49

   81 it_cota_fija: BPARA . BIDENTIFICADOR BDOS_PUNTOS_IGUAL expresion BHASTA expresion BHACER instrucciones BFPARA

    BIDENTIFICADOR  shift, and go to state 105


State 50

   66 operando_booleano: BIDENTIFICADORB .

    $default  reduce using rule 66 (operando_booleano)


State 51

   74 asignacion: expresion .

    $default  reduce using rule 74 (asignacion)


State 52

   41 expresion: exp_a .
   44 exp_a: exp_a . BSUMA exp_a
   45      | exp_a . BMENOS exp_a
   46      | exp_a . BPOR exp_a
   47      | exp_a . BENTRE exp_a
   48      | exp_a . BMOD exp_a
   49      | exp_a . BDIV exp_a
   61 exp_b: exp_a . BOPREL exp_a

    BSUMA   shift, and go to state 106
    BMENOS  shift, and go to state 107
    BPOR    shift, and go to state 108
    BENTRE  shift, and go to state 109
    BMOD    shift, and go to state 110
    BDIV    shift, and go to state 111
    BOPREL  shift, and go to state 112

    $default  reduce using rule 41 (expresion)


State 53

   42 expresion: exp_b .
   54 exp_b: exp_b . BY exp_b
   55      | exp_b . BO exp_b

    BY  shift, and go to state 113
    BO  shift, and go to state 114

    $default  reduce using rule 42 (expresion)


State 54

   51 exp_a: operando .
   63 operando: operando . BPUNTO operando
   64         | operando . BCORCHETE_APERTURA expresion BCORCHETE_CIERRE
   65         | operando . BREF
   73 asignacion: operando . BDOS_PUNTOS_IGUAL

    BPUNTO              shift, and go to state 115
    BCORCHETE_APERTURA  shift, and go to state 116
    BREF                shift, and go to state 117
    BDOS_PUNTOS_IGUAL   shift, and go to state 118

    $default  reduce using rule 51 (exp_a)


State 55

   57 exp_b: operando_booleano .

    $default  reduce using rule 57 (exp_b)


State 56

   10 bloque: declaraciones instrucciones .

    $default  reduce using rule 10 (bloque)


State 57

   67 instrucciones: instruccion . BPUNTO_Y_COMA instrucciones
   68              | instruccion .

    BPUNTO_Y_COMA  shift, and go to state 119

    $default  reduce using rule 68 (instrucciones)


State 58

   70 instruccion: asignacion .

    $default  reduce using rule 70 (instruccion)


State 59

   71 instruccion: alternativa .

    $default  reduce using rule 71 (instruccion)


State 60

   72 instruccion: iteracion .

    $default  reduce using rule 72 (instruccion)


State 61

   79 iteracion: it_cota_exp .

    $default  reduce using rule 79 (iteracion)


State 62

   78 iteracion: it_cota_fija .

    $default  reduce using rule 78 (iteracion)


State 63

   43 expresion: funcion_ll .

    $default  reduce using rule 43 (expresion)


State 64

   11 declaraciones: declaracion_tipo declaraciones .

    $default  reduce using rule 11 (declaraciones)


State 65

   12 declaraciones: declaracion_const declaraciones .

    $default  reduce using rule 12 (declaraciones)


State 66

   13 declaraciones: declaracion_var declaraciones .

    $default  reduce using rule 13 (declaraciones)


State 67

   84 a_cabecera: BIDENTIFICADOR . BPARENTESIS_APERTURA d_par_form BPARENTESIS_CIERRE BPUNTO_Y_COMA

    BPARENTESIS_APERTURA  shift, and go to state 120


State 68

   82 accion_d: BACCION a_cabecera . bloque BFACCION

    BTIPO   shift, and go to state 6
    BCONST  shift, and go to state 7
    BVAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque             go to state 121
    declaraciones      go to state 19
    declaracion_tipo   go to state 20
    declaracion_const  go to state 21
    declaracion_var    go to state 22


State 69

   85 f_cabecera: BIDENTIFICADOR . BPARENTESIS_APERTURA lista_d_var BPARENTESIS_CIERRE BDEF d_tipo BPUNTO_Y_COMA

    BPARENTESIS_APERTURA  shift, and go to state 122


State 70

   83 funcion_d: BFUNCION f_cabecera . bloque BDEV expresion BFFUNCION

    BTIPO   shift, and go to state 6
    BCONST  shift, and go to state 7
    BVAR    shift, and go to state 16

    $default  reduce using rule 14 (declaraciones)

    bloque             go to state 123
    declaraciones      go to state 19
    declaracion_tipo   go to state 20
    declaracion_const  go to state 21
    declaracion_var    go to state 22


State 71

   39 decl_ent: BENT . lista_d_var

    BIDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 33 (lista_d_var)

    lista_d_var  go to state 124
    lista_id     go to state 36


State 72

   40 decl_sal: BSAL . lista_d_var

    BIDENTIFICADOR  shift, and go to state 34

    $default  reduce using rule 33 (lista_d_var)

    lista_d_var  go to state 125
    lista_id     go to state 36


State 73

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal . BCOMENTARIO

    BCOMENTARIO  shift, and go to state 126


State 74

   36 decl_ent_sal: decl_ent .
   37             | decl_ent . decl_sal

    BSAL  shift, and go to state 72

    $default  reduce using rule 36 (decl_ent_sal)

    decl_sal  go to state 127


State 75

   38 decl_ent_sal: decl_sal .

    $default  reduce using rule 38 (decl_ent_sal)


State 76

    7 decl_a_f: accion_d decl_a_f .

    $default  reduce using rule 7 (decl_a_f)


State 77

    8 decl_a_f: funcion_d decl_a_f .

    $default  reduce using rule 8 (decl_a_f)


State 78

   22 d_tipo: BIDENTIFICADOR .
   62 operando: BIDENTIFICADOR .
   91 funcion_ll: BIDENTIFICADOR . BPARENTESIS_APERTURA l_ll BPARENTESIS_CIERRE

    BPARENTESIS_APERTURA  shift, and go to state 95

    BPUNTO_Y_COMA  reduce using rule 22 (d_tipo)
    $default       reduce using rule 62 (operando)


State 79

   20 d_tipo: BTUPLA . lista_campos BFTUPLA

    BIDENTIFICADOR  shift, and go to state 128

    $default  reduce using rule 29 (lista_campos)

    lista_campos  go to state 129


State 80

   21 d_tipo: BTABLA . BCORCHETE_APERTURA expresion_t BPUNTOSS expresion_t BCORCHETE_CIERRE BDE d_tipo

    BCORCHETE_APERTURA  shift, and go to state 130


State 81

   24 d_tipo: BREF . d_tipo

    BIDENTIFICADOR        shift, and go to state 78
    BTUPLA                shift, and go to state 79
    BTABLA                shift, and go to state 80
    BREF                  shift, and go to state 81
    BTIPO_BASE            shift, and go to state 82
    BLITERAL_CARACTER     shift, and go to state 83
    BMENOS                shift, and go to state 40
    BPARENTESIS_APERTURA  shift, and go to state 41
    BLITERAL_NUMERICO     shift, and go to state 42
    BNO                   shift, and go to state 43
    BVERDADERO            shift, and go to state 44
    BFALSO                shift, and go to state 45
    BIDENTIFICADORB       shift, and go to state 50

    d_tipo             go to state 131
    expresion_t        go to state 85
    expresion          go to state 86
    exp_a              go to state 52
    exp_b              go to state 53
    operando           go to state 87
    operando_booleano  go to state 55
    funcion_ll         go to state 63


State 82

   25 d_tipo: BTIPO_BASE .

    $default  reduce using rule 25 (d_tipo)


State 83

   27 expresion_t: BLITERAL_CARACTER .

    $default  reduce using rule 27 (expresion_t)


State 84

   18 lista_d_tipo: BIDENTIFICADOR BIGUAL d_tipo . BPUNTO_Y_COMA lista_d_tipo

    BPUNTO_Y_COMA  shift, and go to state 132


State 85

   23 d_tipo: expresion_t . BPUNTOSS expresion_t

    BPUNTOSS  shift, and go to state 133


State 86

   26 expresion_t: expresion .

    $default  reduce using rule 26 (expresion_t)


State 87

   51 exp_a: operando .
   63 operando: operando . BPUNTO operando
   64         | operando . BCORCHETE_APERTURA expresion BCORCHETE_CIERRE
   65         | operando . BREF

    BPUNTO              shift, and go to state 115
    BCORCHETE_APERTURA  shift, and go to state 116
    BREF                shift, and go to state 117

    $default  reduce using rule 51 (exp_a)


State 88

   15 declaracion_tipo: BTIPO lista_d_tipo BFTIPO BPUNTO_Y_COMA .

    $default  reduce using rule 15 (declaracion_tipo)


State 89

   30 lista_d_cte: BIDENTIFICADOR BIGUAL BLITERAL . BPUNTO_Y_COMA lista_d_cte

    BPUNTO_Y_COMA  shift, and go to state 134


State 90

   16 declaracion_const: BCONST lista_d_cte BFCONST BPUNTO_Y_COMA .
